// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsePatch should handle large datasets 1`] = `
{
  "newData": {
    "data": [
      {
        "data": [
          {
            "type": "string",
            "value": "1d6b2882-9a26-41d6-a976-dff75dfdd5e2",
          },
          {
            "type": "string",
            "value": "2004-05-11",
          },
          {
            "type": "number",
            "value": "3.93",
          },
          {
            "type": "string",
            "value": "PT",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6b2f8c-13c7-4c33-9835-d7e9e5448f81",
          },
          {
            "type": "string",
            "value": "2012-12-16",
          },
          {
            "type": "number",
            "value": "2.18",
          },
          {
            "type": "string",
            "value": "AF",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6b412b-e1be-4566-b27f-d6d2591be73e",
          },
          {
            "type": "string",
            "value": "2019-11-01",
          },
          {
            "type": "number",
            "value": "4.0",
          },
          {
            "type": "string",
            "value": "SI",
          },
          {
            "type": "string",
            "value": "Category A",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6c2c23-39cb-418a-9e09-e22b8ca3601f",
          },
          {
            "type": "string",
            "value": "1993-10-25",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "7.22",
          },
          {
            "type": "string",
            "value": "PE",
          },
          {
            "type": "string",
            "value": "Category B",
          },
        ],
        "isEmphasized": true,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6c6e9c-3f2b-4f36-af8f-4ece80e1c456",
          },
          {
            "type": "string",
            "value": "2021-11-07",
          },
          {
            "type": "number",
            "value": "1.72",
          },
          {
            "type": "string",
            "value": "ME",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6cd9a0-4f30-452f-8dda-34777e2814e0",
          },
          {
            "type": "string",
            "value": "2002-01-04",
          },
          {
            "type": "number",
            "value": "7.89",
          },
          {
            "type": "string",
            "value": "AM",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6e65d0-0b9b-4b76-9517-ed65dd038b14",
          },
          {
            "type": "string",
            "value": "2009-01-25",
          },
          {
            "type": "number",
            "value": "4.63",
          },
          {
            "type": "string",
            "value": "GW",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [],
        "isEllipsis": true,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "3d1634ea-2648-41cf-8bc4-02063d57d6d4",
          },
          {
            "type": "string",
            "value": "2015-05-19",
          },
          {
            "type": "number",
            "value": "8.43",
          },
          {
            "type": "string",
            "value": "KE",
          },
          {
            "type": "string",
            "value": "Category A",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "3d16de2d-c626-46b7-90bb-211be6e38f31",
          },
          {
            "type": "string",
            "value": "2004-02-27",
          },
          {
            "type": "number",
            "value": "0.69",
          },
          {
            "type": "string",
            "value": "JO",
          },
          {
            "type": "string",
            "value": "Category A",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "3d16e1f2-a2fc-4b6a-a00b-fbc4e16aa485",
          },
          {
            "type": "string",
            "value": "2012-05-20",
          },
          {
            "type": "number",
            "value": "2.17",
          },
          {
            "type": "string",
            "value": "CZ",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
    ],
    "diffType": "added",
    "headers": [
      "unique_key",
      "date",
      "metric_value",
      "country_code",
      "category",
    ],
  },
  "oldData": {
    "data": [
      {
        "data": [
          {
            "type": "string",
            "value": "1d6b2882-9a26-41d6-a976-dff75dfdd5e2",
          },
          {
            "type": "string",
            "value": "2004-05-11",
          },
          {
            "type": "number",
            "value": "3.93",
          },
          {
            "type": "string",
            "value": "PT",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6b2f8c-13c7-4c33-9835-d7e9e5448f81",
          },
          {
            "type": "string",
            "value": "2012-12-16",
          },
          {
            "type": "number",
            "value": "2.18",
          },
          {
            "type": "string",
            "value": "AF",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6b412b-e1be-4566-b27f-d6d2591be73e",
          },
          {
            "type": "string",
            "value": "2019-11-01",
          },
          {
            "type": "number",
            "value": "4.0",
          },
          {
            "type": "string",
            "value": "SI",
          },
          {
            "type": "string",
            "value": "Category A",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6c2c23-39cb-418a-9e09-e22b8ca3601f",
          },
          {
            "type": "string",
            "value": "1993-10-25",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "2.59",
          },
          {
            "type": "string",
            "value": "PE",
          },
          {
            "type": "string",
            "value": "Category B",
          },
        ],
        "isEmphasized": true,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6c6e9c-3f2b-4f36-af8f-4ece80e1c456",
          },
          {
            "type": "string",
            "value": "2021-11-07",
          },
          {
            "type": "number",
            "value": "1.72",
          },
          {
            "type": "string",
            "value": "ME",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6cd9a0-4f30-452f-8dda-34777e2814e0",
          },
          {
            "type": "string",
            "value": "2002-01-04",
          },
          {
            "type": "number",
            "value": "7.89",
          },
          {
            "type": "string",
            "value": "AM",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "1d6e65d0-0b9b-4b76-9517-ed65dd038b14",
          },
          {
            "type": "string",
            "value": "2009-01-25",
          },
          {
            "type": "number",
            "value": "4.63",
          },
          {
            "type": "string",
            "value": "GW",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [],
        "isEllipsis": true,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "3d1634ea-2648-41cf-8bc4-02063d57d6d4",
          },
          {
            "type": "string",
            "value": "2015-05-19",
          },
          {
            "type": "number",
            "value": "8.43",
          },
          {
            "type": "string",
            "value": "KE",
          },
          {
            "type": "string",
            "value": "Category A",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "3d16de2d-c626-46b7-90bb-211be6e38f31",
          },
          {
            "type": "string",
            "value": "2004-02-27",
          },
          {
            "type": "number",
            "value": "0.69",
          },
          {
            "type": "string",
            "value": "JO",
          },
          {
            "type": "string",
            "value": "Category A",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "3d16e1f2-a2fc-4b6a-a00b-fbc4e16aa485",
          },
          {
            "type": "string",
            "value": "2012-05-20",
          },
          {
            "type": "number",
            "value": "2.17",
          },
          {
            "type": "string",
            "value": "CZ",
          },
          {
            "type": "string",
            "value": "Category C",
          },
        ],
        "isEmphasized": false,
      },
    ],
    "diffType": "removed",
    "headers": [
      "unique_key",
      "date",
      "metric_value",
      "country_code",
      "category",
    ],
  },
}
`;

exports[`parsePatch should handle when headers are in patch 1`] = `
{
  "newData": {
    "data": [
      {
        "data": [
          {
            "type": "string",
            "value": "unique_key",
          },
          {
            "type": "string",
            "value": "date_month",
          },
          {
            "type": "string",
            "value": "country",
          },
          {
            "type": "string",
            "value": "mrr_bop",
          },
        ],
        "isEmphasized": false,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "2022-01-01__FR",
          },
          {
            "type": "string",
            "value": "2022-01-01",
          },
          {
            "isEmphasized": true,
            "type": "string",
            "value": "FR",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "22.22",
          },
        ],
        "isEmphasized": true,
      },
    ],
    "diffType": "added",
    "headers": [
      "unique_key",
      "date_month",
      "mrr_bop",
      "country",
    ],
  },
  "oldData": {
    "data": [
      {
        "data": [
          {
            "type": "string",
            "value": "2022-01-01__FR",
          },
          {
            "type": "string",
            "value": "2022-01-01",
          },
          {
            "isEmphasized": true,
            "type": "string",
            "value": "FR",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "11.11",
          },
        ],
        "isEmphasized": true,
      },
      {
        "data": [
          {
            "type": "string",
            "value": "unique_key",
          },
          {
            "type": "string",
            "value": "date_month",
          },
          {
            "type": "string",
            "value": "country",
          },
          {
            "type": "string",
            "value": "mrr_bop",
          },
        ],
        "isEmphasized": false,
      },
    ],
    "diffType": "removed",
    "headers": [
      "unique_key",
      "date_month",
      "country",
      "mrr_bop",
    ],
  },
}
`;

exports[`parsePatch should handle when headers change 1`] = `
{
  "newData": {
    "data": [
      {
        "data": [
          {
            "type": "string",
            "value": "2022-01-01__FR",
          },
          {
            "type": "string",
            "value": "2022-01-01",
          },
          {
            "type": "string",
            "value": "FR",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "22.22",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "-22.0",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "-22.0",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "-22.0",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "22.22",
          },
        ],
        "isEmphasized": true,
      },
    ],
    "diffType": "added",
    "headers": [
      "unique_key",
      "date_month",
      "country",
      "mrr_bop",
      "resurrected_mrr",
      "downsell_mrr",
      "fail_to_engage_mrr",
      "churn_mrr",
      "mrr_eop",
    ],
  },
  "oldData": {
    "data": [
      {
        "data": [
          {
            "type": "string",
            "value": "2022-01-01__FR",
          },
          {
            "type": "string",
            "value": "2022-01-01",
          },
          {
            "type": "string",
            "value": "FR",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "11.11",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "11.0",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "-11.0",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "-11.0",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "-11.0",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "11.11",
          },
        ],
        "isEmphasized": true,
      },
    ],
    "diffType": "removed",
    "headers": [
      "unique_key",
      "date_month",
      "country",
      "mrr_bop",
      "resurrected_mrr",
      "downsell_mrr",
      "fail_to_engage_mrr",
      "churn_mrr",
      "mrr_eop",
    ],
  },
}
`;

exports[`parsePatch should handle when headers reverse order 1`] = `
{
  "newData": {
    "data": [
      {
        "data": [
          {
            "type": "string",
            "value": "2022-01-01__FR",
          },
          {
            "type": "string",
            "value": "2022-01-01",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "22.22",
          },
          {
            "type": "string",
            "value": "FR",
          },
        ],
        "isEmphasized": true,
      },
    ],
    "diffType": "added",
    "headers": [
      "unique_key",
      "date_month",
      "mrr_bop",
      "country",
    ],
  },
  "oldData": {
    "data": [
      {
        "data": [
          {
            "type": "string",
            "value": "2022-01-01__FR",
          },
          {
            "type": "string",
            "value": "2022-01-01",
          },
          {
            "type": "string",
            "value": "FR",
          },
          {
            "isEmphasized": true,
            "type": "number",
            "value": "11.11",
          },
        ],
        "isEmphasized": true,
      },
    ],
    "diffType": "removed",
    "headers": [
      "unique_key",
      "date_month",
      "country",
      "mrr_bop",
    ],
  },
}
`;
